--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -5,3 +5,11 @@
 .dark {
     @apply bg-gray-800 text-zinc-50
 }
+
+.top-navigation-icon {
+    @apply text-gray-500
+    mr-3 ml-4
+    transition duration-300 ease-in-out 
+    hover:text-green-400 
+    cursor-pointer;
+  }
